--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
-
+    <script src="./js/script.js"></script>
+    <!-- <script src="../Параллакс 29042021/js/script.js"></script> -->
     <title>Parallax</title>
 </head>
 
@@ -38,47 +39,24 @@
             <div class="content__container _container">
                 <h2 class="content__title">Остальной контент сайта</h2>
                 <div class="content__text">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolores veniam cumque, placeat
-                        quaerat, ipsum eum quis, unde odit totam voluptates! Esse illum voluptas repellendus. Labore qui
-                        cupiditate nobis ducimus?</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolores veniam cumque, placeat
-                        quaerat, ipsum eum quis, unde odit totam voluptates! Esse illum voluptas repellendus. Labore qui
-                        cupiditate nobis ducimus?</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolores veniam cumque, placeat
-                        quaerat, ipsum eum quis, unde odit totam voluptates! Esse illum voluptas repellendus. Labore qui
-                        cupiditate nobis ducimus?</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolores veniam cumque, placeat
-                        quaerat, ipsum eum quis, unde odit totam voluptates! Esse illum voluptas repellendus. Labore qui
-                        cupiditate nobis ducimus?</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolores veniam cumque, placeat
-                        quaerat, ipsum eum quis, unde odit totam voluptates! Esse illum voluptas repellendus. Labore qui
-                        cupiditate nobis ducimus?</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolores veniam cumque, placeat
-                        quaerat, ipsum eum quis, unde odit totam voluptates! Esse illum voluptas repellendus. Labore qui
-                        cupiditate nobis ducimus?</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolores veniam cumque, placeat
-                        quaerat, ipsum eum quis, unde odit totam voluptates! Esse illum voluptas repellendus. Labore qui
-                        cupiditate nobis ducimus?</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolores veniam cumque, placeat
-                            quaerat, ipsum eum quis, unde odit totam voluptates! Esse illum voluptas repellendus. Labore qui
-                            cupiditate nobis ducimus?</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolores veniam cumque, placeat
-                            quaerat, ipsum eum quis, unde odit totam voluptates! Esse illum voluptas repellendus. Labore qui
-                            cupiditate nobis ducimus?</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolores veniam cumque, placeat
-                            quaerat, ipsum eum quis, unde odit totam voluptates! Esse illum voluptas repellendus. Labore qui
-                            cupiditate nobis ducimus?</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolores veniam cumque, placeat
-                            quaerat, ipsum eum quis, unde odit totam voluptates! Esse illum voluptas repellendus. Labore qui
-                            cupiditate nobis ducimus?!!???</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolores veniam cumque, placeat quaerat, ipsum eum quis, unde odit totam voluptates! Esse illum voluptas repellendus. Labore qui cupiditate nobis ducimus?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolores veniam cumque, placeat quaerat, ipsum eum quis, unde odit totam voluptates! Esse illum voluptas repellendus. Labore qui cupiditate nobis ducimus?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolores veniam cumque, placeat quaerat, ipsum eum quis, unde odit totam voluptates! Esse illum voluptas repellendus. Labore qui cupiditate nobis ducimus?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolores veniam cumque, placeat quaerat, ipsum eum quis, unde odit totam voluptates! Esse illum voluptas repellendus. Labore qui cupiditate nobis ducimus?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolores veniam cumque, placeat quaerat, ipsum eum quis, unde odit totam voluptates! Esse illum voluptas repellendus. Labore qui cupiditate nobis ducimus?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolores veniam cumque, placeat quaerat, ipsum eum quis, unde odit totam voluptates! Esse illum voluptas repellendus. Labore qui cupiditate nobis ducimus?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolores veniam cumque, placeat quaerat, ipsum eum quis, unde odit totam voluptates! Esse illum voluptas repellendus. Labore qui cupiditate nobis ducimus?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolores veniam cumque, placeat quaerat, ipsum eum quis, unde odit totam voluptates! Esse illum voluptas repellendus. Labore qui cupiditate nobis ducimus?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolores veniam cumque, placeat quaerat, ipsum eum quis, unde odit totam voluptates! Esse illum voluptas repellendus. Labore qui cupiditate nobis ducimus?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolores veniam cumque, placeat quaerat, ipsum eum quis, unde odit totam voluptates! Esse illum voluptas repellendus. Labore qui cupiditate nobis ducimus?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolores veniam cumque, placeat quaerat, ipsum eum quis, unde odit totam voluptates! Esse illum voluptas repellendus. Labore qui cupiditate nobis ducimus?!!???</p>
                 </div>
             </div>
 
         </section>
 
     </div>
-    <script src="./js/script.js"></script>
-    <!-- <script src="../Параллакс 29042021/js/script.js"></script> -->
+
 </body>
 
 </html>
